Bugfix: Ensure that the borders for input forms exist after the css reset
The CSS reset removed the borders, making it hard to see that input forms exist.
This adds a simple 1px inset on each input field.

--- a/sites/all/themes/genesis/genesis_mcneese/css/clean.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/clean.css
@@ -38,3 +38,10 @@ div.node-content img {
   -webkit-box-shadow: 2px 2px 1px #888888;
   box-shadow: 2px 2px 1px #888888;
 }
+
+select,
+input,
+textarea,
+textarea.form-textarea {
+  border: 1px inset #888888;
+}
